--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -1,6 +1,7 @@
 ---
 title       : Vectors
 description : The most basic unit to store data in R are vectors. We'll learn about creating and working with them in this chapter. 
+difficulty level     : 1
 ---
 
 
