--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -59,7 +59,7 @@ n*(n+1)/2
 ```{r}
 # first instruction  
 test_object("n", incorrect_msg = "Make sure that you use `n` as your variable name and that you have assigned the correct value to `n`.")
-
+test_object("x", incorrect_msg = "Make sure that you use `n` as your variable name and that you have assigned the correct value to `n`.")
 # General 
 test_error() 
 success_msg("Good job ! Let`s apply this to another question")
