--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -19,13 +19,12 @@ We can use the formula $ n(n+1)/2 $ to quickly compute this quantity.
 
 *** =instructions
  
-Define 'n=100' and then use R to compute the sum of 1 through 100 using the given formula.What is the sum?
+Define 'n=100' and then use R to compute the sum of 1 through 100 using the formula $ n(n+1)/2$. What is the sum?
 
 
 *** =hint
 
-Follow the sample code in the editor. 
-
+Define `n` to be 100 in one line and simply type the formula using R code in the second line. Remember that in R you multiply using `*`.
 
 *** =pre_exercise_code
 ```{r}
@@ -50,7 +49,17 @@ n*(n+1)/2
 
 *** =solution
 ```{r}
-# Define the n to be 100 then calculate the sum with the formula
+# Here is how you compute the sum for the first 20 integers
+20*(20+1)/2 
+
+# However, we can define a variable to use the formula for other values of n
+n <- 20
+n*(n+1)/2
+
+n <- 25
+n*(n+1)/2
+
+# Below, write your code to calculate the sum of the first 100 integers 
 n <- 100
 n*(n+1)/2 
 ```
