--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -83,11 +83,13 @@ success_msg("Good job ! Let`s apply this to another question")
 
 *** =instructions
 
-Use the same formula as the first question to compute the sum of the integers from 1 through 1,000:
+What is the sum of the first $n$ positive integers? 
+
+We can use the formula $ n(n+1)/2 $ to quickly compute this quantity.
 
 *** =hint
 
-Same formula as the last exercise 
+Use the same R code as you used in the first question after changing the value of `n`.
 
 *** =pre_exercise_code
 ```{r}
@@ -122,6 +124,7 @@ test_error()
 success_msg("Good job ! Let`s get to work on another question!")
 ```
 ----
+
 --- type:MultipleChoiceExercise lang:r xp:50 skills:1 key:ba448c1da3
 
 ## Functions
@@ -143,7 +146,8 @@ Based on the result, what do you think the functions `seq` and `sum` do? You can
 - sum always returns the same number
 
 *** =hint
-What do the words seq and sum mean generally?
+
+Go to R console and type `seq(1,5)`. See what you get. Then got the R console again and type `sum(seq(1,5))`. Change the `5` to other numbers.
 
 *** =pre_exercise_code
 ```{r}
