Updating files via DataCamp: chapter1.Rmd

--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -126,4 +126,46 @@ test_error()
 success_msg("Good job ! Let`s get to work on another question!")
 ```
 
+
 ---
+## <<<New Exercise>>>
+
+```yaml
+type: NormalExercise
+key: 0e2a0ce37a
+lang: r
+xp: 100
+skills: 1
+```
+Run the following code in the R console:
+
+```{r, eval=FALSE}
+n <- 1000
+x <- seq(1,n)
+sum(x)
+```
+
+Based on the result, what do you think the functions `seq` and `sum` do? You can use the help system.
+
+`@instructions`
+- sum creates a list of numbers and seq adds them up. 
+- seq creates a list of numbers and sum adds them up. 
+- seq computes the difference between two arguments and sum computes the sum of 1 through 1000. 
+- sum always returns the same number
+
+`@hint`
+Go to R console and type `seq(1,5)`. See what you get. Then got the R console again and type `sum(seq(1,5))`. Change the `5` to other numbers.
+
+`@pre_exercise_code`
+```{r}
+# no pec
+```
+
+`@sct`
+```{r}
+msg1 = "Try again! Read the choices carefully. Try again."
+msg2 = "Well done. Proceed to the next exercise."
+msg3 = "There`s no specificaton of 1 to 1000 for sum. Try again."
+msg4 = "Read the help file for sum by typing `?sum` in the R console."
+test_mc(correct = 2, feedback_msgs = c(msg1,msg2,msg3,msg4))
+```
