--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -169,3 +169,134 @@ msg3 = "There`s no specificaton of 1 to 1000 for sum. Try again."
 msg4 = "Read the help file for sum by typing `?sum` in the R console."
 test_mc(correct = 2, feedback_msgs = c(msg1,msg2,msg3,msg4))
 ```
+
+---
+## Nested function calls 1
+
+```yaml
+type: NormalExercise
+key: 7df9567ad1
+lang: r
+xp: 100
+skills: 1
+```
+In math and programming we say we evaluate a function when we replace arguments with specific values. So if we type `log2(16)` we evaluate the `log2` function to get the log to the base 2 of `16` which is `4`. 
+
+In R it is often useful to evaluate a function inside another function. 
+For example, `sqrt(log2(16))` will calculate the log to the base 2 of 16 and then compute the square root of that value. 
+So the first evaluation gives a 4 and this gets evaluated by `sqrt` to give the final answer of 2.  
+
+
+`@instructions`
+- Use one line of code to compute the log, to the base 10, of the square root of 100. 
+- Make sure your code inclues the `log10` and `sqrt`functions.
+
+
+`@hint`
+The `log10` function call should be the argument for the a`sqrt` function. 
+
+`@pre_exercise_code`
+```{r}
+# no pec
+```
+
+`@sample_code`
+```{r}
+# log to the base 2 
+log2(16)
+
+# sqrt of the log to the base 2 of 16:
+sqrt(log2(16))
+
+# Compute log to the base 10 (log10) of the sqrt of 100
+```
+
+`@solution`
+```{r}
+# log to the base 2 
+log2(16)
+
+# sqrt of the log to the base 2 of 16:
+sqrt(log2(16))
+
+# Compute log to the base 10 (log10) of the sqrt of 100
+log10(sqrt(100))
+```
+
+`@sct`
+```{r}
+test_output_contains ("log10(sqrt(100))", times = 1, incorrect_msg = "Make sure you mentioned the base and put the sqrt function in parenthesis.")
+test_error() 
+success_msg("Very good!")
+```
+
+
+---
+## Nested functions call 2
+
+```yaml
+type: MultipleChoiceExercise
+key: b755d1a929
+lang: r
+xp: 50
+skills: 1
+```
+Which of the following will always return the numeric value stored in `x`? You can try out examples and use the help system in the R console.
+
+`@instructions`
+- `log(10^x)`
+- `log10(x^10)`
+- `log(exp(x))`
+- `exp(log(x, base = 2))`
+
+`@hint`
+You are looking for the case in which a function and it's inverse are called sequentially. You can also try out each one on the consule: assign a numeric value to `x` then try out each of the lines of code given in the choices.
+
+`@pre_exercise_code`
+```{r}
+# no pec
+```
+
+`@sct`
+```{r}
+msg1 = "Try again! Note that `log(10^1)` is not 1 but the natural log of 10."
+msg2 = "Try again! Note that `log(1^10)` is 0 not 1."
+msg3 = "Well done. Proceed to the next exercise"
+msg4 = "Try again! Note that `exp(log(2, base = 2)` is 0 not 2."
+test_mc(correct = 3, feedback_msgs = c(msg1,msg2,msg3,msg4))
+```
+
+---
+## <<<New Exercise>>>
+
+```yaml
+type: PlainMultipleChoiceExercise
+key: 5d1f828748
+lang: r
+xp: 0
+skills: 1
+```
+This is the end of the programming assignment for this section. 
+
+You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/cfded5c208bc4e379606cb712cc54f25/5ba06674d0be41b99185b947e09e889b/?child=first'>course</a>.
+
+If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
+
+`@instructions`
+- Awesome
+- Nope
+
+`@hint`
+- No hint necessary!
+
+`@pre_exercise_code`
+```{r}
+# no pec
+```
+
+`@sct`
+```{r}
+msg1 = "Great! Now navigate back to the course on edX!"
+msg2 = "Now navigate back to the course on edX!"
+test_mc(correct = 1, feedback_msgs = c(msg1,msg2))
+```
