--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -1,3 +1,56 @@
 ---
 title       : Vectors
 description : The most basic unit to store data in R are vectors. We'll learn about creating and working with them in this chapter.
+---
+## Numeric Vectors
+
+```yaml
+type: NormalExercise
+key: eb99436e3b
+lang: r
+xp: 100
+skills: 1
+```
+A vector is series of values all of the same type. They are the most basic data type in R and can hold numeric data, character data, or logical data. In R, you can create a vector with the combine function `c()`. You place the vector elements separated by a comma between the parentheses. For example a numeric vector would look something like this: 
+
+```{r}
+cost <- c(50, 75, 90, 100, 150)
+```
+
+`@instructions`
+Use the function `c()` to create a numeric vector with the average high temperatures in January for Beijing, Lagos, Paris, Rio de Janeiro, San Juan, and Toronto which are `35, 88, 42, 84, 81, and 30` degrees Fahrenheit. Call the object `temp`.
+
+`@hint`
+Make sure your numbers are within parenthesis and have commas separating them. 
+
+`@pre_exercise_code`
+```{r}
+# no pec
+```
+
+`@sample_code`
+```{r}
+# Here is an example creating a numeric vector named cost
+cost <- c(50, 75, 90, 100, 150)
+
+# Create a numeric vector to store the temperatures listed above into temp
+# Make sure to follow the same order as above
+
+```
+
+`@solution`
+```{r}
+# Here is an example creating a numeric vector named cost
+cost <- c(50, 75, 90, 100, 150)
+
+# Create a numeric vector to store the temperatures listed above into temp
+# Make sure to follow the same order as above
+temp <- c(35, 88, 42, 84, 81, 30)
+```
+
+`@sct`
+```{r}
+test_error()
+test_object("temp", incorrect_msg = "Check to match the numbers from the question!")
+success_msg("Good job! Do you want to now try creating a character vector")
+```
