--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -66,13 +66,11 @@ n*(n+1)/2
 
 `@sct`
 ```{r}
-# first instruction  
-#test_object("n", incorrect_msg = "Make sure that you use `n` as your variable name and that you have assigned the correct value to `n`.")
-#test_object("x", incorrect_msg = "Make sure that you use `n` as your variable name and that you have assigned the correct value to `n`.")
-#test_output_contains ("12332424", incorrect_msg = "Take a look at your code for the second instruction.")
-# General 
-test_error() 
-success_msg("Good job ! Let`s apply this to another question")
+# first instruction
+test_object("n", incorrect_msg = "Make sure that you use `n` as your variable name and that you have assigned the correct value to `n`.")
+test_output_contains("5050", incorrect_msg = "That formula does not give the correct answer. Look at the example code.")
+test_student_typed("n*(n+1)/2", not_typed_msg = "Make sure you type the equation. Look at the example code.")
+success_msg("Good job! Let`s apply this to another question.")
 ```
 ---
 ## Using variables 2
