--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -68,6 +68,7 @@ n*(n+1)/2
 ```{r}
 # first instruction
 test_object("n", incorrect_msg = "Make sure that you use `n` as your variable name and that you have assigned the correct value to `n`.")
+# second instruction
 test_student_typed("n*(n+1)/2", not_typed_msg = "Make sure you type the equation. Look at the example code.")
 success_msg("Good job! Let`s apply this to another question.")
 ```
