--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -67,7 +67,7 @@ n*(n+1)/2
 `@sct`
 ```{r}
 test_object("n", incorrect_msg = "Make sure that you use `n` as your variable name and that you have assigned the correct value to `n`.")
-test_student_typed("n*(n+1)/2", not_typed_msg = "Make sure you type the equation. Look at the example code.")
+test_student_typed("CACA", not_typed_msg = "Make sure you type the equation. Look at the example code.")
 success_msg("Good job! Let`s apply this to another question.")
 ```
 ---
