--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -58,7 +58,7 @@ lang: r
 xp: 100
 skills: 1
 ```
-In the previous question, we saw the different variables that are a part of this dataset from the output of the `src()` function. The  function `names()` is specifically designed to extract the column names from a data frame. 
+In the previous question, we saw the different variables that are a part of this dataset from the output of the `str()` function. The  function `names()` is specifically designed to extract the column names from a data frame. 
 
 `@instructions`
 What are the column names used by the murders data frame for the five variables?
